Fixed font weights for better readability

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ form {
 }
 
 label {
-    font-weight: 400;
+    font-weight: 500;
     text-align: left;
     display: block;
     font-size: 1rem;
